aggiunto link nell'index alla tabella

--- a/style.css
+++ b/style.css
@@ -124,6 +124,13 @@ main dl div{
     width:80%;
 }
 
+main a:link{
+    color:var(--linkColor)
+}
+
+main a:visited{
+    color: var(--visitedLinkColor);
+}
 
 
 /********************************
