--- a/mini.css
+++ b/mini.css
@@ -3,13 +3,19 @@
     margin:0;
 }
 
+/********************************
+*HEADER
+********************************/
 header h1{
     font-size: 2em;
     line-height: 1em;
 }
 
+/********************************
+*NAV
+********************************/
 #menu ul{
-    width:95%;
+    width:auto;   
 }
 
 #menu ul li{
@@ -25,6 +31,9 @@ header h1{
     font-size: 1.5em;
 }
 
+/********************************
+*MAIN
+********************************/
 main.colonne{
     column-width:300px;
 }
@@ -33,10 +42,27 @@ main.colonne{
     display:none;
 }
 
+/********************************
+*COMPONENTI
+********************************/
 #componenti{
-    width:98%
+    width:98%;
+    
 }
 
+/********************************
+*DISCOGRAFIA
+********************************/  
+#album{
+    width:auto;
+}
+#album li img{
+    width:12em;
+ }
+
+/********************************
+*TABELLA
+********************************/
 thead{
     display: none;
 }
