--- a/style.css
+++ b/style.css
@@ -116,6 +116,13 @@ main h2{
     font-size: 2em;
 }
 
+main h3{
+    text-align: center;
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+    font-size: 1.2em;
+}
+
 main.colonne{
     column-count: 3;
     width:90%;
@@ -214,7 +221,22 @@ footer{
     font-weight:bold;
 }
 
+/********************************
+*DISCOGRAFIA
+********************************/   
+#album {
+    list-style-type: none;/*rimuovo i pallini*/
+    text-align: center;
+}
 
+#album li{
+    display: inline-block;
+    padding: 2em;
+}
+
+#album li img{
+   width:20em;
+}
 
 
 /********************************
