--- a/style.css
+++ b/style.css
@@ -227,16 +227,64 @@ footer{
 #album {
     list-style-type: none;/*rimuovo i pallini*/
     text-align: center;
+    margin:auto;
 }
 
 #album li{
     display: inline-block;
+    width:26%;
+    aspect-ratio: 1/1;
     padding: 2em;
 }
 
-#album li img{
-   width:20em;
+#album li a{
+    display:block;
+    width:100%;
+    height:100%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-indent: -9999px;
+    overflow: hidden;
+    font-size: 7em;
+    line-height: 1.5em;
+
 }
+
+#album li a:link{
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    transition:.5s;
+}
+#album li a:hover{
+    filter:grayscale(0%);
+    transform:scale(1.1);
+}
+
+#fakenews{
+    background-image: url(./images/fakenews.jpg);
+}
+
+#ahia{
+    background-image: url(./images/ahia.jpg);
+}
+
+#ringo{
+    background-image: url(./images/fuorihyperingo.jpg);
+}
+
+#hype{
+    background-image: url(./images/fuorihype.jpg);
+}
+
+#brucata{
+    background-image: url(./images/gioventubrucata.jpg);
+}
+
+#calcio{
+    background-image: url(./images/calcio.jpg);
+}
+
 
 
 /********************************
