--- a/style.css
+++ b/style.css
@@ -289,6 +289,9 @@ footer{
     background-image: url(./images/calcio.jpg);
 }
 
+#reNudo{
+    background-image: url(./images/renudo.jpg);
+}
 
 
 /********************************
